stuff works. bug when adding more than one genre to movie

--- a/A4-Movie-Library/A4-Movie-Library.csproj
+++ b/A4-Movie-Library/A4-Movie-Library.csproj
@@ -18,6 +18,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\Genre.cs" />
+    <Compile Remove="Models\MovieGenre.cs" />
+    <Compile Remove="Models\Occupation.cs" />
+    <Compile Remove="Models\User.cs" />
+    <Compile Remove="Models\UserMovie.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="appsettings.json" />
     <None Remove="Data\movies.csv" />
   </ItemGroup>
