--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /A4-Movie-Library/appsettings.json
+/MovieLibraryEntities-master/appsettings.json
