updated delete and search

--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,5 @@ MigrationBackup/
 FodyWeavers.xsd
 /A4-Movie-Library/appsettings.json
 /MovieLibraryEntities-master/appsettings.json
+/bfg.jar
+/.git.bfg-report/2022-11-14/02-16-27
