--- a/A4-Movie-Library/A4-Movie-Library.csproj
+++ b/A4-Movie-Library/A4-Movie-Library.csproj
@@ -41,6 +41,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="bin\Debug\net6.0\appsettings.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="BetterConsoleTables" Version="1.1.3" />
     <PackageReference Include="CsvHelper" Version="30.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.0">
